objects/copado__Feature_Toggle_Requirement__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__Feature_Toggle__c</fullName>
        <label>Feature Toggle</label>
        <referenceTo>copado__Feature_Toggle__mdt</referenceTo>
        <relationshipLabel>Feature Toggle Requirements</relationshipLabel>
        <relationshipName>Feature_Toggle_Requirements</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CustomPermission</fullName>
                    <default>true</default>
                    <label>Custom Permission</label>
                </value>
                <value>
                    <fullName>PermissionSet</fullName>
                    <label>Permission Set</label>
                </value>
                <value>
                    <fullName>PermissionSetGroup</fullName>
                    <label>Permission Set Group</label>
                </value>
                <value>
                    <fullName>CopadoLicense</fullName>
                    <label>Copado License</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Feature Toggle Requirement</label>
    <listViews>
        <fullName>copado__All_Feature_Toggle_Requirements</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>copado__Feature_Toggle__c</columns>
        <columns>copado__Type__c</columns>
        <columns>copado__Value__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>All Feature Toggle Requirements</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Feature Toggle Requirements</pluralLabel>
</CustomObject>